<resources>
    <string name="app_name">TradeLexi</string>
    <string name="message1">Connect with the right source</string>
    <string name="message_info1">With Tradelexi, we connect you with the right source that will deliver your work perfectly</string>
    <string name="message2">Get quality and reliable service</string>
    <string name="message_info2">Enjoy a hitch free experience</string>
    <string name="message3">Grow your business network</string>
    <string name="message_info3">Show your skills to the world</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="sign_up_as">Sign up as..</string>
    <string name="client">Client</string>
    <string name="service_provider">Service Provider</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="log_in_as">Log in as..</string>
    <string name="don_t_have_an_account_yet">Don’t have an account yet?</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_an_account">Create an account</string>
    <string name="full_name">Full name</string>
    <string name="email_address">Email Address</string>
    <string name="hi_let_s_get_you_back_in">Hi! Let’s get you back in</string>
    <string name="new_user">New user?</string>
    <string name="error_field_required">Field required.</string>
    <string name="error_invalid_email">Invalid email address.</string>
    <string name="error_password_length">At least 6 characters needed.</string>
    <string name="error_password_mismatch">Password does not match.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_fejiro_set_up_your_account">Hi! Set up your account</string>
    <string name="add_a_picture_of_you">Add a picture of you</string>
    <string name="choose">Choose</string>
    <string name="pro_tip">Pro tip: Adding a clear picture of you will increase \ncustomer trust.</string>
    <string name="back">Back</string>
    <string name="let_s_know_you">Let’s know you!</string>
    <string name="fill_in_your_personal_details">Fill in your personal details</string>
    <string-array name="gender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="state">State:</string>
    <string name="business_address">Business Address:</string>
    <string name="say_a_little_about_yourself">Say a little about yourself:</string>
    <string name="add_a_valid_means_of_identification">Add a valid means of Identification</string>
    <string name="select_a_preferred_means_of_identification">Select a preferred means of \nidentification</string>
    <string name="voter_s_card">Voter\'s Card</string>
    <string name="national_id_card">National ID Card</string>
    <string name="drivers_license">Drivers\' License</string>
    <string name="upload">Upload</string>
    <string name="verification_of_details_would_take_3_5_days">Verification of details would take 3–5 days.</string>
    <string name="we_are_committed_to_providing_our_customers_with_quality_services">We are committed to providing our customers with quality services.</string>
    <string name="do_you_have_any_certifications_nit_will_increase_customer_trust">Do you have any certifications? \nIt will increase customer trust!</string>
    <string name="ttc">Trade Test certificate</string>
    <string name="cac">CAC (Tax Identification Number)</string>
    <string name="sme">SMEDANe</string>
    <string name="what_can_you_do">What can you do?</string>
    <string name="type_in_the_service_you_are_willing_to_nrender">Type in the service you are willing to \nrender.</string>
    <string name="e_g_electrical_work_baking">E.g, Electrical work, Baking</string>
    <string name="catalog_portfolio">Catalog/Portfolio</string>
    <string name="showcase_your_work">Showcase your work.</string>
    <string name="select_pictures_from_gallery">Select pictures from gallery</string>
    <string name="pro_tip_upload_up_to_4_pictures_for_best_results">Pro tip: Upload up to 4 pictures for best results</string>
    <string name="rates">Rates</string>
    <string name="how_much_do_you_charge">How much do you charge?</string>
    <string name="pro_tip_rate">Pro tip: Place reasonable prices, so as not to scare away potential clients.</string>
    <string name="service">Service:</string>
    <string name="price_range">Price range:</string>
    <string name="service_hint">E.g, Pumping tires, making a dress</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_a_subscription_plan">Select a Subscription plan.</string>
    <string name="choose_a_plan_that_fits_your_budget">Choose a plan that fits your budget.</string>
    <string name="choose_a_payment_option">Choose a payment option.</string>
    <string name="select_a_preferred_payment_option">Select a preferred payment option.</string>
    <string name="you_re_all_set">You’re all set!</string>
    <string name="tradelexi_slogan">Your one-stop shop for in-person services</string>
    <string name="zero">0</string>
    <string name="tradelexi_regular">Tradelexi Regular</string>
    <string name="current_plan">Current Plan</string>
    <string name="text_regular_info">Profile will be created but won’t be visible to public until subscription to Standard or Regular plans is confirmed</string>
    <string name="tradelexi_standard">Tradelexi Standard</string>
    <string name="three_thousand">&#8358;3,000</string>
    <string name="seven_thousand"><strike>&#8358;7,000</strike></string>
    <string name="tradelexi_standard_info1">Free for the first two weeks &#9679; See an respond to clients.</string>
    <string name="try_for_1_month_free">Try for 1 month free</string>
    <string name="tradelexi_standard_info2">*Get all the benefits of a Standard plan for 1 month, then ₦3,000 per month</string>
    <string name="tradelexi_premium">Tradelexi Premium</string>
    <string name="five_thousand">&#8358;5,000</string>
    <string name="ten_thousand"><strike>&#8358;10,000</strike></string>
    <string name="tradelexi_premium_info1">Free for the first two weeks &#9679; See an respond to clients &#9679; Get recommended to clients &#9679; Unlimited gigs per month</string>
    <string name="tradelexi_premium_info2">*Get all the benefits of a Premium plan for 1 month, then ₦5,000 per month</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="zeros">0000000000</string>
    <string name="kuda_microfinance_bank">Kuda Bank</string>
    <string name="credit_or_debit_card">Credit or Debit Card</string>
    <string name="xxx">XXXX XXXX XXXX XXXXX</string>
    <string name="mm_yy">MM / YY</string>
    <string name="xx">XXX</string>
    <string name="card_info">*Using a card gets you 10% off!</string>
    <string name="save_card">Save Card</string>
    <string name="we_will_never_share_your_details">* We will never share your details.</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="welcome_chibufirst">Welcome!</string>
    <string name="search_for_service_providers">Search for service providers</string>
    <string name="categories">Categories</string>
    <string name="hair_care">Hair care</string>
    <string name="electrical_amp_mechanical_stuff"><![CDATA[Electrical & Mechanical stuff]]></string>
    <string name="drycleaning_amp_house_keeping"><![CDATA[Drycleaning & House keeping]]></string>
    <string name="male_female_fashion">Male/Female Fashion</string>
    <string name="handy_work">Handy Work</string>
    <string name="home_tutoring">Home Tutoring</string>
    <string name="food_catering_services">Food/Catering services</string>
    <string name="digital_services">Digital services</string>
    <string name="top_providers">Top providers:</string>
    <string name="godfirst">Godfirst</string>
    <string name="onuoha">Onuoha</string>
    <string name="caterer">Caterer</string>
    <string name="_5_0">5.0</string>
    <string name="your_profile">Your Profile</string>
    <string name="imo_state">Imo State</string>
    <string name="account_settings">Account Settings</string>
    <string name="update_email">Update Email</string>
    <string name="change_password">Change password</string>
    <string name="register_as_service_provider">Register as Service Provider</string>
    <string name="delete_account">Delete account</string>
    <string name="contact_us">Contact us</string>
    <string name="help_center">Help Center</string>
    <string name="search_results">Search Results</string>
    <string name="photography">Photography</string>
    <string name="male_fashion">Male Fashion</string>
    <string name="catering">Catering</string>
    <string name="dry_cleaning">Dry cleaning</string>
    <string name="filters">Filters</string>
    <string name="reset">Reset</string>
    <string name="barbing">Barbing</string>
    <string name="filter_by">Filter by</string>
    <string name="price_8358">Price (₦)</string>
    <string name="proximity_miles">Proximity (Miles)</string>
    <string name="done">Done</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="photographer">Photographer</string>
    <string name="_4_5">4.5</string>
    <string name="_30_reviews">(30 reviews)</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="call">Call</string>
    <string name="vendor_address">Lagos, Nigeria, 40 miles away from you</string>
    <string name="total_no_of_jobs">Total no. of jobs</string>
    <string name="_38">38</string>
    <string name="jobs_completed">Jobs completed</string>
    <string name="_37">37</string>
    <string name="description">Description</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sapien eu eget quisque tellus aliquet lectus purus, etiam. Id quam pretium aliquam leo blandit ipsum magna.</string>
    <string name="portfolio">Portfolio</string>
    <string name="services_offered">Services offered</string>
    <string name="people_who_viewed_this_photographer_also_viewed">People who viewed this Photographer also viewed</string>
    <string name="godfirst_s_reviews">Godfirst\'s Reviews</string>
    <string name="anonymous">Anonymous</string>
    <string name="_12_days_ago">12 days ago</string>
    <string name="lorem_small">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet.</string>
    <string name="phone_number">Phone number:</string>
    <string name="add_a_guarantor">Add a guarantor</string>
    <string name="rate_this_service_provider">Rate this service provider</string>
    <string name="tell_others_what_you_think">Tell others what you think</string>
    <string name="write_a_review">Write a review</string>
    <string name="reviews_are_public">*Reviews are public*</string>
    <string name="describe_your_experience_optional">Describe your experience (optional)</string>
    <string name="submit">Submit</string>
    <string name="close">Close</string>
    <string name="statistics">Statistics</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="manage_jobs">Manage Jobs</string>
    <string name="manage_subscription">Manage Subscription</string>
    <string name="samuel">Samuel</string>
    <string name="oyekoya">Oyekoya</string>
    <string name="ogun_state">Ogun State</string>
</resources>