<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    android:paddingEnd="20dp"
    tools:context=".client.ProfileFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_profile"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/profile_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/samuel"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/image_profile"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/oyekoya"
            android:textAllCaps="true"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/text_first_name"
            app:layout_constraintTop_toBottomOf="@id/text_first_name" />

        <TextView
            android:id="@+id/text_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/ogun_state"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/text_last_name"
            app:layout_constraintTop_toBottomOf="@id/text_last_name" />

        <TextView
            android:id="@+id/occupation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photographer"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_last_name"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:background="@color/orange" />

    <TextView
        android:id="@+id/text_statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:paddingStart="0dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/statistics"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/statistics"
        app:drawableTint="@color/black" />

    <TextView
        android:id="@+id/text_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:paddingStart="0dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/edit_profile"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/ic_edit_profile"
        app:drawableTint="@color/black" />

    <TextView
        android:id="@+id/text_manage_jobs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:paddingStart="0dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/manage_jobs"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/manage_jobs"
        app:drawableEndCompat="@drawable/small_3"
        app:drawableTint="@color/black" />

    <TextView
        android:id="@+id/text_manage_subscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:paddingStart="0dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/manage_subscription"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/manage_sub"
        app:drawableTint="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/orange" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_settings"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_update_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:paddingStart="0dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/update_email"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/ic_email_update"
        app:drawableTint="@color/black" />

    <TextView
        android:id="@+id/text_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:paddingStart="0dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/change_password"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/ic_change_password"
        app:drawableTint="@color/black" />

    <TextView
        android:id="@+id/text_delete_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:paddingStart="0dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/delete_account"
        android:textColor="@color/blue"
        app:drawableStartCompat="@drawable/ic_delete"
        app:drawableTint="@color/black" />


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/orange" />

    <TextView
        android:id="@+id/text_contact_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:paddingStart="0dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/contact_us"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/ic_contact"
        app:drawableTint="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:paddingStart="0dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/help_center"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/ic_help"
        app:drawableTint="@color/black" />

</LinearLayout>